src/objects/Process_Template_Step__c.object
<CustomObject>
    <description>XLR8 custom object for the Process Engine template steps. This is the child object to the Process Engine template object and holds all of the steps for a given process template.</description>
    <fields>
        <fullName>Assign_To_Case_Role__c</fullName>
        <label>Assign to Case Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Case Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_Contact_Role__c</fullName>
        <label>Assign to Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Contact Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_Lead_Role__c</fullName>
        <label>Assign to Lead Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Lead Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_Opportunity_Role__c</fullName>
        <label>Assign to Opportunity Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Opportunity Role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_Process_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Process Owner is the person who instantiates the process for a record.</inlineHelpText>
        <label>Assign to Process Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_To_Role_Formula__c</fullName>
        <formula>CASE (TEXT(Process_Template__r.Type__c), &apos;Entity&apos;,  TEXT(Assign_To_Role__c), &apos;Lead&apos;,  TEXT(Assign_To_Lead_Role__c), &apos;Case&apos;,  TEXT(Assign_To_Case_Role__c), &apos;Contact&apos;,  TEXT(Assign_To_Contact_Role__c), &apos;Opportunity&apos;,  TEXT(Assign_To_Opportunity_Role__c), &apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign to Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Role__c</fullName>
        <label>Assign to Entity Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Svcs Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_to_Record_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Record Owner is the person who owns the record where the process is being instantiated.</inlineHelpText>
        <label>Assign to Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This user will be assigned this step every time the template is instantiated on a record.</inlineHelpText>
        <label>Assign to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuperTask_Template_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_In_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of days the task is expected to require for completion. Enter as a whole number, otherwise it will be rounded. Task due date will be calculated based on this value.  A duration of 0 (zero) will result in a task due date equal to the current date.</inlineHelpText>
        <label>Duration in Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Step_IDs__c</fullName>
        <label>Predecessor Step IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Steps__c</fullName>
        <label>Predecessor Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Template</label>
        <referenceTo>Process_Template__c</referenceTo>
        <relationshipLabel>Process Template Steps</relationshipLabel>
        <relationshipName>Process_Template_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <formula>TEXT(Process_Template__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Template Type (Types are Entity, Contact, Case, Opportunity or Lead)</inlineHelpText>
        <label>Template Type</label>
        <type>Text</type>
    </fields>
    <label>Process Template Step</label>
    <nameField>
        <label>Process Template Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Template Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>